fix align css

--- a/sass/base/_insignes.scss
+++ b/sass/base/_insignes.scss
@@ -25,6 +25,7 @@
 
 
 [data-fal-insigne] {
+    text-align: center;
     img {
         width: auto;
         height: 50px;
